controller/testdata/live-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: firefly--firefly-api-dev-base-route
  namespace: ns-team-firefly--firefly-api-deploy--ffd95da3--namesp-ed34d692
spec:
  routes:
    - rateLimitPolicy:
        global:
          descriptors:
            - entries:
                - requestHeader:
                    descriptorKey: ims_user_id
                    headerName: x-gw-ims-user-id
