controller/testdata/live-mutating-webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"admissionregistration.k8s.io/v1","kind":"MutatingWebhookConfiguration","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"aws-lb-controller","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"aws-load-balancer-controller","app.kubernetes.io/version":"v2.5.2","argocd.argoproj.io/instance":"my-aws-lb-controller","helm.sh/chart":"aws-load-balancer-controller-1.5.3"},"name":"aws-load-balancer-webhook"},"webhooks":[{"admissionReviewVersions":["v1bet [...]
  creationTimestamp: '2023-07-12T12:43:35Z'
  generation: 2
  labels:
    app.kubernetes.io/instance: aws-lb-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: aws-load-balancer-controller
    app.kubernetes.io/version: v2.5.2
    argocd.argoproj.io/instance: my-aws-lb-controller
    helm.sh/chart: aws-load-balancer-controller-1.5.3
  name: aws-load-balancer-webhook
  resourceVersion: '6491247'
  uid: 773ae9e5-a9a0-497f-a366-17b4dae4a667
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      caBundle: >-
        something
      service:
        name: aws-load-balancer-webhook-service
        namespace: kube-system
        path: /mutate-v1-pod
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: mpod.elbv2.k8s.aws
    namespaceSelector:
      matchExpressions:
        - key: elbv2.k8s.aws/pod-readiness-gate-inject
          operator: In
          values:
            - enabled
    objectSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - aws-load-balancer-controller
    reinvocationPolicy: Never
    rules:
      - apiGroups:
          - ''
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
        scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      caBundle: >-
        something
      service:
        name: aws-load-balancer-webhook-service
        namespace: kube-system
        path: /mutate-elbv2-k8s-aws-v1beta1-targetgroupbinding
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: mtargetgroupbinding.elbv2.k8s.aws
    namespaceSelector: {}
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
      - apiGroups:
          - elbv2.k8s.aws
        apiVersions:
          - v1beta1
        operations:
          - CREATE
        resources:
          - targetgroupbindings
        scope: '*'
    sideEffects: None
    timeoutSeconds: 10
