controller/testdata/pod-running-restart-always.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: 2018-12-02T09:24:46Z
  name: my-pod
  namespace: argocd
  resourceVersion: "151753"
  selfLink: /api/v1/namespaces/argocd/pods/my-pod
  uid: 1c3943ee-f614-11e8-a057-fe5f49266390
spec:
  containers:
  - command:
    - sh
    - -c
    - sleep 99999
    image: alpine:latest
    imagePullPolicy: Always
    name: main
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-f9jvj
      readOnly: true
  dnsPolicy: ClusterFirst
  nodeName: minikube
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-f9jvj
    secret:
      defaultMode: 420
      secretName: default-token-f9jvj
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: 2018-12-02T09:24:46Z
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: 2018-12-02T09:24:50Z
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: 2018-12-02T09:24:46Z
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://be00d86c48878b352f0ae0cae5dd4ba78025726a62893c768a0fd5754f45e93a
    image: alpine:latest
    imageID: docker-pullable://alpine@sha256:621c2f39f8133acb8e64023a94dbdf0d5ca81896102b9e57c0dc184cadaf5528
    lastState: {}
    name: main
    ready: true
    restartCount: 0
    state:
      running:
        startedAt: 2018-12-02T09:24:49Z
  hostIP: 192.168.64.41
  phase: Running
  podIP: 172.17.0.9
  qosClass: BestEffort
  startTime: 2018-12-02T09:24:46Z
